kite-server/edge-ingress/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
static_resources:
  listeners:
  - name: public_http
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 8500
    filter_chains:
    - filters: &public_http_filters
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          stat_prefix: ingress_http
          route_config:
            name: default
            virtual_hosts:
            - name: default
              domains: ["*"]
              routes:
              - match:
                  prefix: "/tensorflow.serving.PredictionService/"
                route:
                  auto_host_rewrite: true
                  cluster: models_stats_proxy
              - match:
                  prefix: "/kite.kite_server.MetadataService/"
                route:
                  auto_host_rewrite: true
                  cluster: metadata
              - match:
                  prefix: "/model-assets/"
                route:
                  auto_host_rewrite: true
                  cluster: tunable_models
          http_filters:
          - name: envoy.filters.http.router
  - name: public_https
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 9500
    filter_chains:
    - filters: *public_http_filters
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          common_tls_context:
            tls_certificates:
              - certificate_chain: { filename: "/etc/envoy/ssl/edge-ingress.crt" }
                private_key: { filename: "/etc/envoy/ssl/edge-ingress.key" }
            alpn_protocols: "h2,http/1.1"
  - name: tune_http
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 8501
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          stat_prefix: tune_ingress_http
          route_config:
            name: tune_default
            virtual_hosts:
            - name: tune_default
              domains: ["*"]
              routes:
              - match:
                  prefix: "/tensorflow.serving.PredictionService/"
                route:
                  auto_host_rewrite: true
                  cluster: models_stats_proxy
              - match:
                  prefix: "/model-assets/"
                route:
                  auto_host_rewrite: true
                  cluster: tunable_models
              - match:
                  prefix: "/api/"
                route:
                  auto_host_rewrite: true
                  cluster: tunable_models
          http_filters:
          - name: envoy.filters.http.router
  clusters:
  - name: models_stats_proxy
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: LEAST_REQUEST
    http2_protocol_options: { }
    load_assignment:
      cluster_name: models_stats_proxy
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: models-stats-proxy
                port_value: 8600
  - name: metadata
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: LEAST_REQUEST
    http2_protocol_options: { }
    load_assignment:
      cluster_name: metadata
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: metadata
                port_value: 8080
  - name: tunable_models
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: LEAST_REQUEST
    load_assignment:
      cluster_name: tunable_models
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: tunable-models
                port_value: 8502
